2.2.0
 - setup: bump dclab from 0.26.2 to 0.27.0 (support for machine
   learning features)
2.1.6
 - fix: export file names were allowed to have invalid characters
 - fix: Quick View showed filtered events that were not plotted
   (statistics were computed correctly though)
 - fix: Quick View was not very informative when all events were
   filtered away - a message is now shown
 - setup: bump dclab from 0.26.1 to 0.26.2 (fix bin num computation
   using Doane's formula)
2.1.5
 - fix: marker hue feature data min/max was always computed even if
   not selected; for datasets without bright_avg (standard hue) this
   resulted in long waiting times
 - fix: avoid pyqtgraph error messages in pipeline plots by disabling
   hovering events (not used anyway)
 - fix: plot export did not work for single plots
 - fix: exported event images sometimes had wrong contrast
2.1.4
 - enh: add busy cursors wherever it seems fitting
 - setup: bump dclab from 0.24.7 to 0.26.1 (volume-deformation
   isoelasticity lines, improved DCOR caching)
2.1.3
 - fix: opening sessions did not work due to missing slot decorator
 - fix: in some cases the temperature/viscosity setting was not
   correctly written to the UI for individual slots when switching
   between slots with fundamentally different settings (e.g. channel
   and reservoir)
 - fix: KeyError when switching between slots with different
   temperature options
 - setup: bump dclab from 0.23.0 to 0.24.7 (equidistant isoelastics,
   faster polygon filtering, crosstalk correction failed due to
   improper configuration update since Shape-Out 2.1.1)
2.1.2
 - fix: ValueError when trying to compute contour spacing, because no
   datasets are selected for a plot
 - fix: coloring scatter plot by feature did not work when the feature
   contains nan values
 - fix: search path in session should not be filename but its
   directory
 - setup: bump dclab from 0.22.5 to 0.23.0 (possible HDF5 export issue)
2.1.1